# taskmaster

./: .gitignore  README.md  pyproject.toml
backend/: .env.db  README.md  __init__.py  alembic.ini  pyproject.toml  server.py
backend/alembic/: env.py
backend/alembic/versions/: 20240905_000001_create_tasks.py
backend/app/: audio_utils.py  main.py  transcription.py
backend/scripts/: export_openapi.py
backend/taskmaster/: config.py  transcription.py
backend/taskmaster/api/: __init__.py  register.py
backend/taskmaster/api/resources/: __init__.py
backend/taskmaster/api/resources/core/service/: __init__.py  service.py
backend/taskmaster/api/resources/system/: __init__.py
backend/taskmaster/api/resources/system/service/: __init__.py  impl.py  service.py
backend/taskmaster/api/resources/system/types/: __init__.py  health_response.py
backend/taskmaster/api/resources/tasks/: __init__.py
backend/taskmaster/api/resources/tasks/service/: __init__.py  impl.py  service.py
backend/taskmaster/api/resources/transcription/: __init__.py
backend/taskmaster/db/: __init__.py  session.py
backend/taskmaster/db/models/: task.py
backend/taskmaster/sdk/: __init__.py  client.py  environment.py
backend/taskmaster/sdk/taskmaster/: __init__.py  client.py  raw_client.py
backend/taskmaster/sdk/taskmaster/types/: __init__.py  health_response.py  transcription_response.py
backend/taskmaster/services/system/: core.py
backend/taskmaster/services/task_management/: core.py  repo.py
backend/taskmaster/services/task_management/generation/: agent.py  prompt_loader.py
backend/taskmaster/services/transcription/: core.py  transcription.py
backend/tests/: conftest.py  test_api_tasks.py  test_repo_tasks.py
(+80 files in other folders)
