[project]
name = "taskmaster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.32.0",
    "openai>=1.102.0",
    "traceloop-sdk>=0.46.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "faster-whisper>=1.0.3",
]
