[project]
name = "taskmaster-backend"
version = "0.1.0"
description = "Taskmaster backend server (FastAPI)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "openai>=1.40.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.3",
    "starlette>=0.36",
    "ruff>=0.12.12",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pytest>=8",
    "httpx>=0.27",
    "greenlet>=3.2.4",
    "jinja2>=3.1.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["taskmaster*"]
exclude = ["alembic*"]
